adguard/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: network
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:v0.108.0-b.69
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /opt/adguardhome/work
        - name: adguard-config
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adguard-data
      - name: config
        configMap:
          name: adguard-config
