adguard/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: network
spec:
  ports:
  - name: dns-udp
    port: 53
    targetPort: dns-udp
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: dns-tcp
    protocol: TCP
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: adguard
  type: ClusterIP
