adguard/05-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard-ingress
  namespace: network
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`adguard.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: adguard-service
      port: http
